--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                                     <a href="#second" class="menu__link">About</a>
                                 </li>
                                 <li class="menu__list">
-                                    <a href="#third" class="menu__link">Info</a>
+                                    <a href="#third" class="menu__link">Works</a>
                                 </li>
                                 <li class="menu__list">
-                                    <a href="" class="menu__link">Works</a>
+                                    <a href="#fourth" class="menu__link">Prices</a>
                                 </li>
                                 <li class="menu__list">
-                                    <a href="" class="menu__link">Prices</a>
+                                    <a href="#fifth" class="menu__link">Info</a>
                                 </li>
                                 <li class="menu__list">
-                                    <a href="" class="menu__link">Contact</a>
+                                    <a href="#sixth" class="menu__link">Contact</a>
                                 </li>
                             </ul>
                         </nav>
@@ -332,22 +332,22 @@
                 <div class="col-xl-6 offset-xl-1">
                     <ul class="menu__block menu-footer">
                         <li class="menu__list">
-                            <a href="" class="menu__link">Home</a>
+                            <a href="#header" class="menu__link">Home</a>
                         </li>
                         <li class="menu__list">
-                            <a href="" class="menu__link">About</a>
+                            <a href="#second" class="menu__link">About</a>
                         </li>
                         <li class="menu__list">
-                            <a href="" class="menu__link">Info</a>
+                            <a href="#third" class="menu__link">Works</a>
                         </li>
                         <li class="menu__list">
-                            <a href="" class="menu__link">Works</a>
+                            <a href="#fourth" class="menu__link">Prices</a>
                         </li>
                         <li class="menu__list">
-                            <a href="" class="menu__link">Prices</a>
+                            <a href="#fifth" class="menu__link">Info</a>
                         </li>
                         <li class="menu__list">
-                            <a href="" class="menu__link">Contact</a>
+                            <a href="#sixth" class="menu__link">Contact</a>
                         </li>
                     </ul>
                 </div>
