--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-xl-7 offset-xl-1">
+                            <p class="offer__paragraph about-paragraph">
+                                Our platform differs from other similar programs with a social component. This is a platform whose users interpret the meaning of certain lines. There are many fans among these people who follow the life and work of their favorite authors and collect facts that help to understand the meaning of the songs.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-xl-2 offset-xl-4">
                             <div class="offer-block offer-block_one"><a class="offer-block__button" href="#">start now</a></div>
                         </div>
@@ -77,7 +84,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <p class="about-paragraph">
-                                Sit amet, consectetur adipiscing elit. Pellentesque condimentum, tortor convallis eleifend dapibus, quam sem commodo lorem, vitae suscipit sapien purus dignissim orci. Ut vulputate scelerisque sapien tempor dignissim. Vivamus accumsan condimentum rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec auctor lectus et nibh tincidunt, et dignissim lectus scelerisque. Maecenas tincidunt fermentum tristique. Duis sem odio, porttitor id sapien ullamcorper, sagittis hendrerit tortor. Nam aliquam posuere facilisis. Duis ornare sem tellus, in sagittis augue rutrum id.
+                                I conclude the selection with one of the most practical services. Here you can find your favorite songs, upload them to your selection, and listen to a selection of friends. It's really cool that the site analyzes your music preferences and offers popular picks from other people with similar tastes. Hear many new artists.
                             </p>
                         </div>
                     </div>
@@ -95,7 +102,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <p class="about-paragraph">
-                                Sit amet, consectetur adipiscing elit. Pellentesque condimentum, tortor convallis eleifend dapibus, quam sem commodo lorem, vitae suscipit sapien purus dignissim orci. Ut vulputate scelerisque sapien tempor dignissim. Vivamus accumsan condimentum rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec auctor lectus et nibh tincidunt, et dignissim lectus scelerisque. Maecenas tincidunt fermentum tristique. Duis sem odio, porttitor id sapien ullamcorper, sagittis hendrerit tortor. Nam aliquam posuere facilisis. Duis ornare sem tellus, in sagittis augue rutrum id.
+                                Our platform differs from other similar programs with a social component. This is a platform whose users interpret the meaning of certain lines. There are many fans among these people who follow the life and work of their favorite authors and collect facts that help to understand the meaning of the songs.
                             </p>
                         </div>
                     </div>
@@ -129,7 +136,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-12 text-center">
-                    <h2 class="square__heading section-name">Выбор подписки</h2>
+                    <h2 class="square__heading section-name">Selecting subscriptions</h2>
                 </div>
             </div>
             <div class="row">
@@ -142,25 +149,25 @@
                         </div>
                         <div class="row">
                             <div class="col-xl-12 text-center">
-                                <p class="square__heading subscription-block__heading">Слушайте музыку без ограничений</p>
+                                <p class="square__heading subscription-block__heading">Listen to music without limits</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-12 text-center">
-                                <p class="numbers__span subscription-block__paragraph">"Индивидуальная"</p>
+                                <p class="numbers__span subscription-block__paragraph">"Individual"</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-5 offset-xl-1">
-                                <p class="subscription-block__price">Новая цена:</p>
+                                <p class="subscription-block__price">New price:</p>
                             </div>
                             <div class="col-xl-5">
-                                <p class="subscription-block__price ">100грн/мес</p>
+                                <p class="subscription-block__price ">100 UAH/month</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-8 offset-xl-2">
-                                <button class="subscription-block__button">Попробовать</button>
+                                <button class="subscription-block__button">Click</button>
                             </div>
                         </div>
                     </div>
@@ -174,25 +181,25 @@
                         </div>
                         <div class="row">
                             <div class="col-xl-12 text-center">
-                                <p class="square__heading subscription-block__heading">Слушайте музыку без ограничений</p>
+                                <p class="square__heading subscription-block__heading">Listen to music without limits</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-12 text-center">
-                                <p class="numbers__span subscription-block__paragraph">"Студенческая"</p>
+                                <p class="numbers__span subscription-block__paragraph">"Student"</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-5 offset-xl-1">
-                                <p class="subscription-block__price">Новая цена:</p>
+                                <p class="subscription-block__price">New price:</p>
                             </div>
                             <div class="col-xl-5">
-                                <p class="subscription-block__price ">50грн/мес</p>
+                                <p class="subscription-block__price ">50 UAH/month</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-8 offset-xl-2">
-                                <button class="subscription-block__button">Попробовать</button>
+                                <button class="subscription-block__button">Click</button>
                             </div>
                         </div>
                     </div>
@@ -206,25 +213,25 @@
                         </div>
                         <div class="row">
                             <div class="col-xl-12 text-center">
-                                <p class="square__heading subscription-block__heading">Слушайте музыку без ограничений</p>
+                                <p class="square__heading subscription-block__heading">Listen to music without limits</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-12 text-center">
-                                <p class="numbers__span subscription-block__paragraph">"Бизнес"</p>
+                                <p class="numbers__span subscription-block__paragraph">"Business"</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-5 offset-xl-1">
-                                <p class="subscription-block__price">Новая цена:</p>
+                                <p class="subscription-block__price">New price:</p>
                             </div>
                             <div class="col-xl-5">
-                                <p class="subscription-block__price">500грн/мес</p>
+                                <p class="subscription-block__price">500 UAH/month</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-8 offset-xl-2">
-                                <button class="subscription-block__button">Попробовать</button>
+                                <button class="subscription-block__button">Click</button>
                             </div>
                         </div>
                     </div>
@@ -235,13 +242,13 @@
                     <div class="timer" id="id">
                         <div class="row">
                             <div class="col-xl-12 text-center">
-                                <div class="timer-title">Успей купить подписку со скидкой</div>
+                                <div class="timer-title">Manage to buy a subscription with a discount</div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-12 text-center">
                                 <div class="timer-action">
-                                    До конца акции осталось
+                                    Until the end of the promotion
                                 </div>
                             </div>
                         </div>
@@ -269,15 +276,14 @@
                         <div class="section-block">
                             <div class="row">
                                 <div class="col-xl-8 offset-xl-4">
-                                    <h2 class="square__heading section-name section-name_two">Слушайте музыку без ограничений</h2>
+                                    <h2 class="square__heading section-name section-name_two">GIVE MUSIC WITHOUT LIMITS</h2>
                                 </div>
                             </div>
                             <div class="row">
-                                <p class="about-paragraph">consectetur adipiscing elit. Pellentesque condimentum, tortor convallis eleifend dapibus, quam sem commodo lorem, vitae suscipit sapien purus dignissim orci. Ut vulputate scelerisque sapien tempor dignissim. Vivamus accumsan condimentum rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec auctor lectus et nibh tincidunt, et dignissim lectus scelerisque. Maecenas tincidunt fermentum tristique. Duis sem odio, porttitor id sapien ullamcorper, sagittis hendrerit tortor. Nam aliquam posuere facilisis. Duis ornare sem tellus, in sagittis augue rutrum id.</p>
+                                <p class="about-paragraph section-block__paragraph">What could be better than 12 months of unlimited music?<br>Hurry up to purchase a package for yourself and your loved ones, only on New Year's Eve.</p>
                             </div>
                         </div>
                     </div>
-                   
                 </div>
             </div>
         </div>
